Updated function: rdf2pajek

--- a/examples/jupyter_notebook/jRDF2vec_notebook_demo.ipynb
+++ b/examples/jupyter_notebook/jRDF2vec_notebook_demo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "380254a5-fe3e-478c-bbbb-1ef099419f27",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "d6c1bb11-60d6-4644-8611-76e32e54697a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!java -jar jrdf2vec.jar -graph $file_to_embed -dimension 25 &> embedding_log.txt"
+    "!java -jar jrdf2vec.jar -graph $file_to_embed -dimension 25 -embedText &> embedding_log.txt"
    ]
   },
   {
@@ -52,12 +52,16 @@
    "id": "37193f42-2c57-4be0-adb6-b1cabf3d5dde",
    "metadata": {},
    "source": [
-    "Let's quickly print a part of the vocabulary"
+    "**We are done.** A folder `walks` should have been created. In the latter, you will find the walks as well as the model files.<br/>\n",
+    "The subsequent code is pure Python/Gensim code play with the vectors.\n",
+    "\n",
+    "\n",
+    "Let's quickly print a part of the vocabulary:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "099c7566-356c-49f4-b69d-8cd8b5b15fb8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "8cdb5fcc-f61f-4afc-b418-9210e6e07408",
    "metadata": {},
    "outputs": [
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "5c48e93d-bfd7-4e2a-b6a6-28fee6730929",
    "metadata": {},
    "outputs": [
@@ -143,8 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1988dae4-f9c7-4a67-ab5a-9b49a9631ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using server port: 1808\n"
+     ]
+    }
+   ],
+   "source": [
+    "!java -jar jrdf2vec.jar -convertToW2V ./walks/vectors.txt vectors.w2v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6a6f9f8-0375-4276-a3d2-ef1ff592fbb7",
    "metadata": {},
    "outputs": [],
    "source": []
